syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

//todo: 废弃
message WsCartRequest {
    sint64 MemberId = 1;
    string Action = 2;
    map<string, string> Data = 3;
}
message NormalCartRequest {
    sint64 MemberId = 1;
    string Action = 2;
    map<string, string> Data = 3;
}



// 购物车
message SShoppingCart {
    //编号
    sint32 CartId = 1;
    //购物车KEY
    string Code = 2;
    //店铺分组
    repeated SShoppingCartGroup Shops = 3;
}
// 购物车店铺分组
message SShoppingCartGroup {
    //店铺编号
    sint64 ShopId = 1;
    //供货商编号
    sint64 VendorId = 2;
    //店铺名称
    string ShopName = 3;
    //是否结算
    bool Checked = 4;
    //商品
    repeated SShoppingCartItem Items = 5;
}

// 购物车商品勾选
message SCheckCartItem {
    //商品编号
    sint64 itemId = 1;
    //SKU编号
    sint64 skuId = 2;
    // 是否勾选
    bool checked = 3;
}

// 购物车商品操作响应
message CartItemResponse {
    int64 errCode = 1;
    string errMsg = 2;
    SShoppingCartItem item = 3;
}

// 购物车商品
message SShoppingCartItem {
    //商品编号
    sint64 itemId = 1;
    //SKU编号
    sint64 skuId = 2;
    //商品标题
    string title = 3;
    //商品图片
    string image = 4;
    //规格文本
    string specWord = 5;
    //商品编码
    string code = 6;
    //零售价
    double retailPrice = 7;
    //销售价
    double price = 8;
    //数量
    sint32 quantity = 9;
    //是否结算
    bool checked = 10;
    //库存文本
    string stockText = 11;
    //店铺编号
    sint64 shopId = 12;
}

// 购物车商品请求
message SCartItem {
    //商品编号
    sint64 itemId = 2;
    //SKU编号
    sint64 skuId = 3;
    // 数量
    int32 quantity = 4;
    // 是否只勾选
    bool checked = 5;
}